[package]
name = "nr-cif"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "Handle Network Rail CIF files."
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fixedlength-format-parser = "0.1.0"
getset = "0.1.2"
thiserror = "1.0.50"
