[package]
name = "nr-cif"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "Handle Network Rail CIF files."
repository = "https://github.com/lilopkins/nr-cif-rs"
version = "0.5.0"
edition = "2021"
license = "MIT"
exclude = [
    "tests/*.cif*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
panic-on-first-error = [ ]
serde = [ "dep:serde", "chrono/serde" ]

[dependencies]
bitflags = "2.4.1"
chrono = "0.4.31"
fixedlength-format-parser = "0.1.1"
getset = "0.1.2"
log = "0.4.20"
serde = { version = "1.0.193", optional = true, features = [ "derive" ] }
thiserror = "1.0.50"

[dev-dependencies]
libflate = "2.0.0"
pretty_env_logger = "0.5.0"
ron = "0.8.1"
